# GeBulAdor

./: .gitignore  Cargo.toml  plan_gba_emulador.md
gba_core/: Cargo.toml
gba_core/src/: arm.rs  bios.rs  bios_hle.rs  bus.rs  cartridge.rs  cpu.rs  dma.rs  header.rs  interrupt.rs  lib.rs  ppu.rs  scheduler.rs  sio.rs  thumb.rs  timers.rs
gba_desktop/: Cargo.toml
gba_desktop/src/: main.rs
