[package]
name = "gba_desktop"
description = "Frontend de escritorio del emulador: ventana, teclado y pintado del framebuffer del núcleo."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# El núcleo de emulación. Es la ÚNICA dependencia "del proyecto"; el resto son
# librerías del frontend (ventana/entrada), que solo pueden vivir aquí.
gba_core = { path = "../gba_core" }

# minifb: ventana + framebuffer mínimos, sin GPU. Se añade con `cargo add minifb`
# para fijar automáticamente la última versión compatible.
minifb = "0.28"
